<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Slate</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_find">Share article</string>
    <string name="action_save">Add to saved stories</string>
    <string name="search_hint">Search</string>
    <string name="action_web">Open in Browser</string>
    <!-- For UI Testing -->
    <string name="test_article_number">--- 3 of 68 ---</string>
	<string name="test_article_date">Sun, 20 Apr 2014 04:36:59 PM</string>
   	<string name="test_article_title">Let’s all make an impact!</string>
   	<string name="test_article_author">by Campus Slate</string>
   	<string name="test_article_content">Grab your sneakers and tell your friends to join you in a relay for life. Come out and spend the night walking around the track for a great cause. For the past five years, at least once a year, NYIT host a Relay for Life event in order to raise awareness and funds to help save the lives of cancer patients. The event will take place at NYIT’s Presidents Field located on the Old Westbury campus on April 25, 2014 from 7pm – 7amDuring the event people are able to come together with survivors and participants to celebrate what they have overcome, remembering those we have lost to cancer and to honor the people who have battled or continue to battle this horrible disease known as cancer,” said Associate Dean of Campus Life, Michael L. Scarpa Burnett. What’s better than spending your free time embracing and making a difference in the lives of people who only want your support?Throughout the event donations can be made to raises funds for research. Participant have the choice of joining NYIT’s very own team or creating their own team allowing them to raise contributions in their own way.  Some of the funds will go to the American Cancer Society  where the research will be done. The rest of the funds will be sent to Hope Lodge Facilities around the country in order to assist and improve patient care, recovery programs, support groups, and various other programs.The event is [ran] by student volunteers, members of the three main organizations on the Old Westbury and Manhattan campus and through support from staff volunteers as well,” said the Associate Dean of Campus Life.  In the years prior, the event has had a successful outcome, consecutively hosting as much as two-hundread to three-hundread guest. Five years ago, because one student wanted to make a change and an impact, NYIT now continues this annual tradition that allows both, Manhattan and Old Westbury campus, as well as students, faculty and staff to come together and fellowship as they perform a community service.If you love to help others, this is the place to be. If you love to exercise, come workout to save a life. If you have nothing to do, well the here is something to do. Everyone is welcome! As said by the Associate Dean of Campus Life, “The only expectation this year is to bring people together to raise funds and awareness to cancer research and trying to battle this disease one step at a time.” Why not take a step to make a change?</string>
   	<string name="test_article_description">On Friday April 25th, NYIT will hold its eleventh annual “Source” event! The Source event (Symposium on University Research and Creative Expression) creates a great opportunity for undergraduate and graduate students alike to share some of their studies and research with their peers! All students are welcome, and it is &#8230;</string>

</resources>
