<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/article_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#10000000" >

        <TextView
            android:id="@+id/article_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30000000"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/test_article_number"
            android:textSize="14sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/article_number"
            android:contentDescription="@string/test_article_title"
            android:src="@drawable/test_article_image" />

        <TextView
            android:id="@+id/article_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_image"
            android:background="#30000000"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/test_article_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_date"
            android:padding="10dp"
            android:text="@string/test_article_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_title"
            android:padding="5dp"
            android:text="@string/test_article_author"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/article_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_author"
            android:padding="5dp"
            android:text="@string/test_article_content"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>